# computer-graphics-marching-cubes

./: .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  build.bash  camera.h  gui.h  main.cpp  marchingcubes.h  marchingcubeslookup.h  mesh.h  run.bash  shader.h
shader/: basic.frag  basic.vert
